--- a/src/app/modules/define-pages/texteditor/texteditor.component.scss
+++ b/src/app/modules/define-pages/texteditor/texteditor.component.scss
@@ -19,7 +19,8 @@ button{
     margin: 2px;
 }
 mat-card{
-    background-color:lightgray;// #20639b;
+width:100%;
+    //    background-color:lightgray;// #20639b;
     //border-top-left-radius: 1em;
     margin-top: 15px;
 }
