--- a/src/app/modules/specialfeature/generatecertificate/generatecertificate.component.html
+++ b/src/app/modules/specialfeature/generatecertificate/generatecertificate.component.html
@@ -26,7 +26,7 @@
                 </mat-form-field>
                 <div *ngIf="SportsCertificate">
                     <mat-form-field appearance="outline">
-                        <mat-label>Houses</mat-label>
+                        <mat-label>Group</mat-label>
                         <mat-select formControlName="searchStudentGroupId" (selectionChange)="clear()">
                             <mat-option value="0">select</mat-option>
                             <!-- <mat-optgroup *ngFor="let item of Groups" [label]="item.name" [disabled]="item.disabled"> -->
