--- a/src/app/modules/student/studentview/studentview.component.html
+++ b/src/app/modules/student/studentview/studentview.component.html
@@ -118,7 +118,7 @@
     <div mat-subheader style="background-color:#e6e6e6;padding:20px">Activity/Achievement</div>
     <mat-list-item *ngFor="let item of SportsResultList">
         <mat-icon mat-list-icon>military_tech</mat-icon>
-        <div mat-line>{{item.Secured}}: {{item.Achievement}}</div>
+        <div mat-line>{{item.Rank}}: {{item.Achievement}}</div>
         <div mat-line> {{item.SportsName}}-{{item.AchievementDate | date}} </div>
     </mat-list-item>
     <!-- <mat-divider></mat-divider>
