--- a/src/app/modules/DataUploadDownload/studentdatadump/studentdatadump.component.html
+++ b/src/app/modules/DataUploadDownload/studentdatadump/studentdatadump.component.html
@@ -1,6 +1,3 @@
-<!-- <mat-card style="margin-top: 15px;">
-    <mat-card-title style="margin:20px">Data Dump</mat-card-title>
-    <mat-card-content style="margin:20px"> -->
 <div style="margin:15px;">
     <div style="font-weight:bolder;margin:15px">Download Student Data</div>
     <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
@@ -17,14 +14,12 @@
         <mat-form-field appearance="outline" style="width: 150px;">
             <mat-label>Search</mat-label>
             <mat-select formControlName="searchRemarkId">
+                <mat-option value="0">select</mat-option>
                 <mat-optgroup *ngFor="let item of Groups" [label]="item.name" [disabled]="item.disabled">
                     <mat-option *ngFor="let list of item.group" [value]="list.MasterDataId">
                         {{list.MasterDataName}}
                     </mat-option>
                 </mat-optgroup>
-                <!-- <mat-option *ngFor="let item of Remarks" [value]="item.MasterDataId">
-                    {{item.MasterDataName}}
-                </mat-option> -->
             </mat-select>
         </mat-form-field>
         <button [disabled]="loading" matTooltip="search student" mat-raised-button color="accent"
@@ -36,28 +31,29 @@
         </button>
     </form>
     <br>
-    <!-- <div id="printsection">
-            <mat-table #table [dataSource]="dataSource" style="overflow: auto;">
-                <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                    <mat-header-cell *matHeaderCellDef>
-                        {{disCol}}
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        {{element[disCol]}}
-                    </mat-cell>
-                </ng-container>
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;" style="min-height: 40px;"></mat-row>
-            </mat-table>
-        </div> -->
-
-    <!-- <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,50]"></mat-paginator> -->
-    <!-- <button (click)="exportArray()" mat-raised-button color="accent">
-            <mat-icon>excel</mat-icon>
+    <div id="printsection">
+        <mat-table #table [dataSource]="dataSource" style="overflow: auto;">
+            <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
+                <mat-header-cell *matHeaderCellDef>
+                    {{disCol}}
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element[disCol]}}
+                </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" style="min-height: 40px;"></mat-row>
+        </mat-table>
+    </div>
+    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,50]"></mat-paginator>
+    <div *ngIf="ELEMENT_DATA.length>0">
+        <button (click)="exportArray()" mat-raised-button color="accent">
+            <mat-icon>download</mat-icon>
             <mat-icon *ngIf="loading">
                 <mat-spinner diameter="25"></mat-spinner>
             </mat-icon>
-        </button> -->
+        </button>
+    </div>
     <!-- </mat-card-content>
 </mat-card> -->
 </div>
