--- a/src/app/modules/specialfeature/grouppoint/grouppoint.component.html
+++ b/src/app/modules/specialfeature/grouppoint/grouppoint.component.html
@@ -5,14 +5,12 @@
 <div style="width: 100%;">
     <form [formGroup]="searchForm">
         <mat-form-field appearance="outline" [style.width.px]="300">
-            <mat-label>House</mat-label>
-            <mat-select formControlName="searchGroupId">
+            <mat-label>Session</mat-label>
+            <mat-select formControlName="searchSessionId">
                 <mat-option value="0">select</mat-option>
-                <!-- <mat-optgroup *ngFor="let item of Groups" [label]="item.name" [disabled]="item.disabled"> -->
-                    <mat-option *ngFor="let list of StudentHouses" [value]="list.MasterDataId">
-                        {{list.MasterDataName}}
-                    </mat-option>
-                <!-- </mat-optgroup> -->
+                <mat-option *ngFor="let list of ActivitySessions" [value]="list.MasterDataId">
+                    {{list.MasterDataName}}
+                </mat-option>
             </mat-select>
         </mat-form-field>
         <button [disabled]="loading" style="margin-right:15px" matTooltip="search" mat-raised-button color="accent"
@@ -21,42 +19,45 @@
             <mat-icon *ngIf="loading">
                 <mat-spinner diameter="20" color="Blue"></mat-spinner>
             </mat-icon>
-        </button>      
+        </button>
     </form>
-    <mat-table #table [dataSource]="dataSource">
-      
-        <ng-container matColumnDef="GroupName">
-            <mat-header-cell *matHeaderCellDef>Group
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element">
-                {{element.GroupName}}
-            </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="Category">
-            <mat-header-cell *matHeaderCellDef>Category
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element">
-                {{element.Category}}
-            </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="SubCategory">
-            <mat-header-cell *matHeaderCellDef>Sub Category
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element">
-                {{element.SubCategory}}
-            </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="Points">
-            <mat-header-cell *matHeaderCellDef>Points
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element">
-                {{element.Points}}
-            </mat-cell>
-        </ng-container>
-        
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;let indx=index" class="element-row"
-            style="align-items: center;"></mat-row>
-    </mat-table>
-    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[3,5,10,20,50]"></mat-paginator>
+    <div>
+        <mat-table #table [dataSource]="dataSource">
+
+            <ng-container matColumnDef="GroupName">
+                <mat-header-cell *matHeaderCellDef>Group
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.GroupName}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Category">
+                <mat-header-cell *matHeaderCellDef>Category
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.Category}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="SubCategory">
+                <mat-header-cell *matHeaderCellDef>Sub Category
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.SubCategory}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Points">
+                <mat-header-cell *matHeaderCellDef>Points
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.Points}}
+                </mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;let indx=index" class="element-row"
+                style="align-items: center;"></mat-row>
+        </mat-table>
+        <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,50]">
+        </mat-paginator>
+    </div>
 </div>
