--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -2,50 +2,52 @@
     <mat-card-title style="margin:20px">Student/Fee</mat-card-title>
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content style="margin:20px">
-        <!-- <alert></alert> -->
         <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-        <form [formGroup]="studentSearchForm" fxLayout="row wrap" fxLayoutAlign="center center">
-            <mat-form-field appearance="outline" style="width: 150px;">
-                <mat-label>Class</mat-label>
-                <mat-select formControlName="searchClassId" (selectionChange)="ClearData()">
-                    <mat-option value="0">select</mat-option>
-                    <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
-                        {{item.ClassName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline" style="width: 150px;">
-                <mat-label>Section</mat-label>
-                <mat-select formControlName="searchSectionId">
-                    <mat-option value="0">select</mat-option>
-                    <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
-                        {{item.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline" style="width: 150px;">
-                <mat-label>search</mat-label>
-                <mat-select formControlName="searchRemarkId">
-                    <mat-option value="0">select</mat-option>
-                    <mat-optgroup *ngFor="let item of Groups" [label]="item.name" [disabled]="item.disabled">
-                        <mat-option *ngFor="let list of item.group" [value]="list.MasterDataId">
-                            {{list.MasterDataName}}
+        <form [formGroup]="studentSearchForm" style="display:flex;flex-direction: column;">
+            <div>
+                <mat-form-field appearance="outline" style="width: 150px;">
+                    <mat-label>Class</mat-label>
+                    <mat-select formControlName="searchClassId" (selectionChange)="ClearData()">
+                        <mat-option value="0">select</mat-option>
+                        <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                            {{item.ClassName}}
                         </mat-option>
-                    </mat-optgroup>
-                    <!-- <mat-option *ngFor="let item of Groups" [value]="item.MasterDataId">
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="outline" style="width: 150px;">
+                    <mat-label>Section</mat-label>
+                    <mat-select formControlName="searchSectionId">
+                        <mat-option value="0">select</mat-option>
+                        <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
+                            {{item.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="outline" style="width: 150px;">
+                    <mat-label>search</mat-label>
+                    <mat-select formControlName="searchRemarkId">
+                        <mat-option value="0">select</mat-option>
+                        <mat-optgroup *ngFor="let item of Groups" [label]="item.name" [disabled]="item.disabled">
+                            <mat-option *ngFor="let list of item.group" [value]="list.MasterDataId">
+                                {{list.MasterDataName}}
+                            </mat-option>
+                        </mat-optgroup>
+                        <!-- <mat-option *ngFor="let item of Groups" [value]="item.MasterDataId">
                         {{item.MasterDataName}}
                     </mat-option> -->
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline" style="width: 150px;">
-                <mat-label>Admission No.</mat-label>
-                <input formControlName="searchAdmissionNo" autocomplete="Off" matInput [maxlength]="10">
-            </mat-form-field>
-            <mat-form-field appearance="outline" style="width: 100px;">
-                <mat-label>PID</mat-label>
-                <input formControlName="searchPID" autocomplete="Off" matInput [maxlength]="10">
-            </mat-form-field>
-            <!-- <mat-form-field appearance="outline">
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field appearance="outline" style="width: 150px;">
+                    <mat-label>Admission No.</mat-label>
+                    <input formControlName="searchAdmissionNo" autocomplete="Off" matInput [maxlength]="10">
+                </mat-form-field>
+                <mat-form-field appearance="outline" style="width: 100px;">
+                    <mat-label>PID</mat-label>
+                    <input formControlName="searchPID" autocomplete="Off" matInput [maxlength]="10">
+                </mat-form-field>
+                <!-- <mat-form-field appearance="outline">
                 <mat-label>Father</mat-label>
                 <input type="text" matInput formControlName="FatherName" [matAutocomplete]="autoF">
                 <mat-autocomplete #autoF="matAutocomplete" [displayWith]="displayFnF">
@@ -64,28 +66,29 @@
                 </mat-autocomplete>
             </mat-form-field> -->
 
-            <mat-form-field appearance="outline" [style.width.px]="350">
-                <mat-label>Student</mat-label>
-                <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
-                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                    <mat-option *ngFor="let option of filteredStudents | async" [value]="option">
-                        {{option.Name}}
-                    </mat-option>
-                </mat-autocomplete>
-            </mat-form-field>
-            <button [disabled]="loading" matTooltip="search student" mat-raised-button color="accent"
-                (click)="GetStudent()">
-                <mat-icon>search</mat-icon>
-                <mat-icon *ngIf="loading">
-                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                </mat-icon>
-            </button>
-            <button [disabled]="loading" matTooltip="new student" mat-raised-button color="accent" (click)="new()">
-                <mat-icon>fiber_new</mat-icon>
-            </button>
+                <mat-form-field appearance="outline" [style.width.px]="350">
+                    <mat-label>Student</mat-label>
+                    <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
+                    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                        <mat-option *ngFor="let option of filteredStudents | async" [value]="option">
+                            {{option.Name}}
+                        </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>
+                <button [disabled]="loading" matTooltip="search student" mat-raised-button color="accent"
+                    (click)="GetStudent()">
+                    <mat-icon>search</mat-icon>
+                    <mat-icon *ngIf="loading">
+                        <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                    </mat-icon>
+                </button>
+                <button [disabled]="loading" matTooltip="new student" mat-raised-button color="accent" (click)="new()">
+                    <mat-icon>fiber_new</mat-icon>
+                </button>
+            </div>
         </form>
         <br>
-        <div style="max-width: 1200px;">
+        <!-- <div *ngIf="ELEMENT_DATA.length>0"> -->
             <mat-table #table [dataSource]="dataSource" matSort>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
@@ -163,11 +166,6 @@
             </mat-table>
             <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,50]">
             </mat-paginator>
-        </div>
+        <!-- </div> -->
     </mat-card-content>
-    <!-- <mat-card-actions fxLayoutAlign="center center">
-        <button [disabled]="loading" (click)="exportArray()" matTooltip="export to excel" class="mat-raised-button">
-            <mat-icon>download</mat-icon>
-        </button>
-    </mat-card-actions> -->
 </mat-card>
