--- a/src/app/modules/student/studentboard/studentboard.component.html
+++ b/src/app/modules/student/studentboard/studentboard.component.html
@@ -2,7 +2,7 @@
     <mat-card-title style="margin:20px">Student</mat-card-title>
     <mat-card-subtitle style="margin:20px;align-items: center; font-weight: bold; background-color:lightgray;padding:15px;margin: 0px 20px 0px 20px;display: flex;justify-content: space-between;">
         <span>{{StudentName}}</span>
-        <div>
+        <div style="display:flex;">
             <span *ngIf="StudentId>0" style="margin-right: 15px;">
                 <button (click)="back()" matTooltip="dashboard" mat-raised-button>
                     <mat-icon>arrow_back</mat-icon>
