before flexlayout upgrade

--- a/src/app/modules/frontoffice/createhtmlpage/createhtmlpage.component.html
+++ b/src/app/modules/frontoffice/createhtmlpage/createhtmlpage.component.html
@@ -43,8 +43,7 @@
             </div>
 
             <div style="margin-bottom: 15px;">
-                <ckeditor formControlName="Description" [config]="ckeConfig" debounce="500">
-                </ckeditor>
+                <quill-editor></quill-editor> 
             </div>
             <div style="display:flex">
                 <div style="margin-right:15px;">
